tdf#129533 Calc crashes on Navigator click or move

regression from
    commit 5bcdbf03012e9d2754c3eb166bd5a01201406d9b
    Date:   Fri Dec 13 20:45:33 2019 +0200
    sc: rowcol: tdf#50916 convert Valid* methods

Change-Id: I0357b125653821ae552cb270f0d64598feedffa3